# event-driven-agentic-rag

./: .gitignore  README.md  client.py  pyproject.toml  worker.py
agent_activities/: __init__.py  agentic_rag_activity.py  rag_activity.py  shared_data_types.py
agent_workflows/: agentic_rag_workflow.py  rag_workflow.py
