[project]
name = "event-driven-agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "llama-index>=0.13.0",
    "llama-index-core>=0.13.0",
    "llama-index-embeddings-google-genai>=0.3.0",
    "llama-index-llms-google-genai>=0.3.0",
    "llama-index-vector-stores-qdrant>=0.7.1",
    "llama-parse>=0.6.54",
    "qdrant-client>=1.15.1",
    "temporalio>=1.15.0",
]
